--- a/Reservation/Reservation_Client/src/GUI/ComplexeView.form
+++ b/Reservation/Reservation_Client/src/GUI/ComplexeView.form
@@ -97,7 +97,7 @@
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="8" rowCount="4">
-                <Column editable="false" title="" type="java.lang.Object"/>
+                <Column editable="false" title="Chambres" type="java.lang.Object"/>
                 <Column editable="false" title="Lundi" type="java.lang.Object"/>
                 <Column editable="false" title="Mardi" type="java.lang.Object"/>
                 <Column editable="false" title="Mercredi" type="java.lang.Object"/>
@@ -172,6 +172,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Reserver"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BookedActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="UnList">
       <Properties>
