--- a/Reservation/Reservation_Client/src/GUI/ComplexeView.form
+++ b/Reservation/Reservation_Client/src/GUI/ComplexeView.form
@@ -180,6 +180,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Lib&#xe9;rer"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UnListActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Payed">
       <Properties>
